resource/workloads/bandwidth-annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  annotations:
    kubernetes.io/ingress-bandwidth: "1M"
    kubernetes.io/egress-bandwidth: "1M"
spec:
  containers:
    - name: test-container
      image: busybox
      command: ["sh", "-c", "echo The app is running! && sleep 3600"]
