resource/workloads/clusterip.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auto-clusterip
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-clusterip
  namespace: auto-clusterip
spec:
  selector:
    matchLabels:
      k8s-app: nginx-app-clusterip
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: nginx-app-clusterip
    spec:
      containers:
        - name: nginx
          image: ranchertest/mytestcontainer:unprivileged
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: nginx-app-clusterip
  name: nginx-clusterip-svc
  namespace: auto-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    k8s-app: nginx-app-clusterip
